# DynamicICS

./: .gitignore  CMakeLists.txt  readme.md
Dynamic/: CMakeLists.txt  Dynamic.cc  Dynamic.h  ICPDynamic.cc  ICPDynamic.h  OrdDynamic.cc  OrdDynamic.h
Index/: CMakeLists.txt  ICPIndex.cc  ICPIndex.h  Index.cc  Index.h  OrdIndex.cc  OrdIndex.h
casestudy/: build.cc  query.cc
core/: CMakeLists.txt  Graph.h  glist.cc  glist.h
gadget/: CMakeLists.txt  Tools.cc  Tools.h  defs.h  dsu.h  gadget.cc  heap.cc  heap.h  treap.cc  treap.h  treap2.cc  treap2.h
run/: checker  checker.cc  main  main.cc
